# delayed-hits

./: .gitignore  Cargo.toml  README.md  diagram.ipynb
cache-sim/: Cargo.toml
cache-sim/src/: cache.rs  lib.rs  macros.rs  simulator.rs  types.rs
cache-sim/src/cache/: lru.rs  mod.rs
data/: .gitignore
data/cdn-traces/: .gitignore  README.md  cdn_long.downloaded.events.sha1
data/ms_prod/: .gitignore  README.md
data/msr_cambridge/: .gitignore
data/msr_cambridge/raw/: README.md
data/net-traces/: .gitignore  chicago-lite.toml  chicago.toml  nyc-lite.toml
data/provided-csv/: README.md  cdn_long.csv.tar.gz.sha1
proj-cache-sim/: Cargo.toml
proj-cache-sim/src/: heuristics.rs  io.rs  lib.rs  macros.rs  simulator.rs  trace_gen.rs  types.rs
proj-cache-sim/src/cache/: lru.rs  lru_mad.rs  mod.rs
proj-experiments/: Cargo.toml
proj-experiments/src/: data.rs  irt_ratio_experiment.rs  main.rs  main_old.rs
proj-models/: Cargo.toml
proj-models/src/: codec.rs  lib.rs  msg.rs  network.rs  storage.rs
proj-net/: Cargo.toml
proj-net/src/: lib.rs  msg.rs
proj-preprocess/: Cargo.toml
proj-preprocess/src/: cdn_parser.rs  downsample.rs  example_parser.rs  ibm_kv_parser.rs  main.rs  models.rs  ms_prod_map.txt  ms_prod_parser.rs  msn_storage_parser.rs  msr_storage_parser.rs  pcap_parser.rs  post_process.rs
proj-preprocess/test-resources/: MSNStorageFileServer-sample.csv  test.pcap
proj-toy-cdn/: Cargo.toml
proj-toy-cdn/src/: experiment.rs  main.rs  simulator.rs
proj-toy-origin/: Cargo.toml
proj-toy-origin/src/: main.rs
results/: 2014chicago.csv  2019nyc.csv  cdn-expriment.csv  cdn.csv  san-jose.csv  storage.csv  tokyo_wheat17_0604.csv
results/tokyo_wheat17_0529/: download.sh  tokyo_wheat17_0529.tar.gz.sha1
results/tokyo_wheat17_0604/: download.sh  tokyo_wheat17_0604.tar.gz.sha1
scripts/: analyze_latency.py  analyze_timestamps.py  cdn_experiment_draw.py  download_traces.py  download_traces_alt.py  draw_diagrams.py  sim_latency_draw.py
