[package]
name = "proj-cache-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = {version = "0.8.11", default-features = false, features = ["std", "compile-time-rng"]}
derivative = "2.2.0"
linked-hash-map = "0.5.6"
proj-models = { version = "0.1.0", path = "../proj-models" }

[features]
verbose = []
