[package]
name = "proj-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
proj-cache-sim = { version = "0.1.0", path = "../proj-cache-sim" }
proj-models = { version = "0.1.0", path = "../proj-models" }
rayon = "1.10.0"
