[package]
name = "proj-preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"]}
clap_derive = "4.5.4"
proj-models = { version = "0.1.0", path = "../proj-models" }
