[package]
name = "proj-preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"]}
clap_derive = "4.5.4"
csv = "1.3.0"
etherparse = "0.14.3"
lazy_static = "1.4.0"
pcap-file = "2.0.0"
proj-models = { version = "0.1.0", path = "../proj-models" }
serde = "1.0.200"
serde_derive = "1.0.201"
toml = "0.8.13"
