[package]
name = "proj-toy-cdn"
description = "A toy CDN node, where we replay the requests using processed events."
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
clap = "4.5.4"
clap_derive = "4.5.4"
proj-cache-sim = { version = "0.1.0", path = "../proj-cache-sim" }
proj-models = { version = "0.1.0", path = "../proj-models" }
proj-net = { version = "0.1.0", path = "../proj-net" }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
