[package]
name = "proj-toy-origin"
description = "The origin node used by the real experiment."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.4"
clap_derive = "4.5.4"
proj-cache-sim = { version = "0.1.0", path = "../proj-cache-sim" }
proj-models = { version = "0.1.0", path = "../proj-models" }
proj-net = { version = "0.1.0", path = "../proj-net" }
tokio = {version = "1", features = ["full"]}
tracing-subscriber = "0.3.18"
